# bachelors-thesis

./: .gitignore  Cargo.toml  README.md  chm13.2bit  chm13.fasta  chm13_to_hg38.txt  docker-compose.yml  hg38.2bit  hg38.fasta  query.fasta  test.fasta  test1.txt
backend/: Cargo.toml  Dockerfile
backend/src/: api.rs  main.rs  xmap.rs
files/: example.txt  test1.xmap  test2.xmap  test3.xmap  test_mini1.xmap  test_mini3.xmap
frontend/: .dockerignore  .gitignore  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.js
frontend/src/: svelte.d.ts
frontend/src/lib/: AreaAnalysis.svelte  DisplayControls.svelte  DonutChart.svelte  DonutInfo.svelte  DonutVisualisation.svelte  ErrorBanner.svelte  FileUpload.svelte  LoadingSpinner.svelte  TabNav.svelte  TwoLines.svelte  bincodeDecoder.ts  darkModeStore.ts  filterStateStore.ts  searchStore.ts  types.ts
frontend/src/routes/: +page.svelte  AreaAnalysis.svelte  D3DonutChart.svelte  DarkModeToggle.svelte  DisplayControls.svelte  DonutChart.svelte  DonutInfo.svelte  DonutVisualisation.svelte
frontend/src/types/: global.d.ts  testing-library.d.ts
frontend/tests/: DonutInfo.test.ts  DonutVisualisation.test.ts  FileUpload.test.ts  PageIntegration.test.ts  bincodeDecoder.test.ts  setup.ts
frontend/tests/__mocks__/: bincodeMock.ts
src/: constants.rs  functions.rs  main.rs  prelude.rs  resources.rs  tests.rs
