[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
axum-extra = { version = "0.10.3", features = ["multipart"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["io"] }
serde = { version = "1.0.228", features = ["derive"] }
bincode = "1.3.3"
dashmap = "7.0.0-rc2"
crossbeam = "0.8.4"
rayon = "1.11.0"
num_cpus = "1.17.0"
bytes = "1.10.1"

[dev-dependencies]